# spl_hw3

./: README.md
Server/: Courses.txt
Server/src/main/java/bgu/spl/net/Data/: Admin.java  Course.java  Database.java  Student.java  User.java
Server/src/main/java/bgu/spl/net/impl/BGRSServer/: ReactorMain.java  TPCMain.java
Server/src/main/java/bgu/spl/net/impl/echo/: EchoClient.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  ThreadPerClientServer.java  registrationMessageEncoderDecoder.java  registrationMessagingProtocol.java
Tests/include/: Client.h
Tests/src/: Client.cpp
spl-hw3/: makefile
spl-hw3/Tests/include/: UserConnection.h
spl-hw3/Tests/src/: SemiUserConnection.cpp  runTests.cpp
spl-hw3/src/: ServerConnection.cpp  regConnectionHandler.cpp  registrationClient.cpp
src/main/java/bgu/spl/net/: Courses.txt
src/main/java/bgu/spl/net/Data/: Course.java  Database.java  Student.java  User.java
src/main/java/bgu/spl/net/Data/spl-hw3/: CMakeLists.txt
src/main/java/bgu/spl/net/Data/spl-hw3/Tests/include/: SemiUserConnection.h  ServerConnection.h  regConnectionHandler.h  runTests.h
src/main/java/bgu/spl/net/Data/spl-hw3/src/: UserConnection.cpp  regHelpers.cpp
src/main/java/bgu/spl/net/impl/BGRSServer/: ReactorMain.java  TPCMain.java
src/main/java/bgu/spl/net/srv/: ThreadPerClientServer.java  registrationMessageEncoderDecoder.java  registrationMessagingProtocol.java
